--- a/udemy-project/src/app/recipes/recipes.component.html
+++ b/udemy-project/src/app/recipes/recipes.component.html
@@ -5,9 +5,10 @@
       </app-recipe-list>  
     </div>
     <div class="col-md-7">
-        <app-recipe-detail *ngIf="selectedRecipe; else infoText"></app-recipe-detail>
+        <router-outlet></router-outlet>
+        <!-- <app-recipe-detail *ngIf="selectedRecipe; else infoText"></app-recipe-detail>
         <ng-template #infoText>
             <p>Please select a recipe!</p>
-        </ng-template>    
+        </ng-template>     -->
     </div>
 </div>
