--- a/udemy-project/src/app/shopping-list/shopping-list.component.html
+++ b/udemy-project/src/app/shopping-list/shopping-list.component.html
@@ -1,12 +1,14 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-shopping-list ingredientAdded="onIngredientAdded($event)"></app-shopping-list>
+        <app-shopping-edit> </app-shopping-edit>
         <hr>
         <ul class="list-group">
             <a class="list-group-item" 
                 style="cursor: pointer"
-                *ngFor="let ingredient of ingerdients">
-                {{ingredient.name}} ({{ingredient.amount}})
+                *ngFor="let ingredient of ingerdients; let i = index"
+                (click)="onEditItem(i)"
+                >
+                {{ingredient.name}} {{ingredient.amount}}
             </a>
         </ul>
     </div>
